Fixed security issues

--- a/HappyWayApp/appsettings.json
+++ b/HappyWayApp/appsettings.json
@@ -11,7 +11,8 @@
     "ConnectionString": "Filename=HappyWayApp.db"
   },
   "Auth": {
-    "Secret": "FDAJFOJAPOHJIOFJP!%PF{JP{A555sfahaFVbzn4as3b|aAFAAAF33256hw6g"
+    "Secret": "FDAJFOJAPOHJIOFJP!%PF{JP{A555sfahaFVbzn4as3b|aAFAAAF33256hw6g",
+    "Salt":  "obnxdkjphxdkrydr-ui=-o=gdsph]=i-su=-gowe211~`"
   },
   "GoogleSheets": {
     "ApiKey": "AIzaSyDQPYmK7S-nFpI3UpMnrCCp6AvBn5rAJKw"
